--- a/neighbourhoodapp/templates/base.html
+++ b/neighbourhoodapp/templates/base.html
@@ -9,6 +9,7 @@
   <title> The Image Gallery </title>
   {% endif %} {% block styles %} {% bootstrap_css %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/animate.css' %}">
   <link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Concert+One|Didact+Gothic|Dosis|K2D|Vidaloka" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
