--- a/neighbourhoodapp/templates/navbar.html
+++ b/neighbourhoodapp/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Charmonman|Kodchasan|Dancing+Script|Spirax" rel="stylesheet">
 
-<nav class="navbar mb-0 mt-0 " id="nav" style="background-color:white;">
+<nav class="navbar navbar-dark mb-0 mt-0 " id="nav">
   <div class="container-fluid">
     <div class="navbar-header">
         <a class="navbar-brand" href="{% url 'homePage' %}"><img src="https://png.icons8.com/doodle/50/000000/home.png" style="height:20px;width:20px;">
