--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,7 +3,7 @@ a {
 }
 
 body {
-  background-color:#48c3af! important;
+  background-color:#000000!important;
   height:100%;
 }
 
@@ -18,6 +18,7 @@ li {
 
 li a {
   padding: 20px;
+  color:white;
 }
 
 #footer1 li {
@@ -38,7 +39,6 @@ li a {
 .img {
     max-height: 55%;
 }
-
 
 
 .carousel-inner,.carousel,.carousel-item,.container,.fill {
@@ -87,7 +87,7 @@ li a {
     transform: rotate(90deg);
 }
 .carousel-indicators li{
-    display:block; margin-bottom:5px; border:1px solid #00a199;
+    display:block; margin-bottom:5px; border:10px solid #00a199;
 
 }
 .carousel-indicators li.active{
@@ -98,6 +98,12 @@ li a {
 
 .loop {
 animation-iteration-count:infinite !important;
+
+}
+
+.slow{
+animation-duration:2000ms;
+cubic-bezier:(.32,-0.07,.73,.64);
 
 }
 
