--- a/neighbourhoodapp/templates/index.html
+++ b/neighbourhoodapp/templates/index.html
@@ -126,7 +126,7 @@
 
 <div class="jumbotron text-center mt-0 mb-0" style="background-color:#000000;font-family: 'Dosis', sans-serif;">
   <h2 style="text-align:center;font-size:40px;color:#ffffff;"><strong>NEIGHBOURHOOD DIRECTORY</strong></h2>
-      <div class="card-deck d-flex">
+      <div class="card-deck d-flex w-32">
         {% for neighbourhood in neighbourhoods %}
         <div class="card w-33">
             <div class="card-title">
