--- a/neighbourhoodapp/templates/registration/registration_form.html
+++ b/neighbourhoodapp/templates/registration/registration_form.html
@@ -1,44 +1,44 @@
 {%extends "registration/base.html"%} {% load bootstrap4 %} {%load static%} {% block content %}
 
-<div class="container" style="background-color:#fff;
+<div class="container" style="background-color:#black;
  background-image:('../../static/photos/rawpixel-594846-unsplash.jpg')">
   <div class="row">
 
     <div class="col-md-6 mt-5">
       <img class="thumbnail" src="{% static 'photos/image1.jpg' %}" style="height:400px;width:500px;">
 
-      <div class="card mt-5" style="width: 28rem;">
+      <div class="card mt-5 border border-primary" style="width: 28rem;background-color:black;">
         <div class="card-body text-center">
-          <h5 class="card-title" style="font-family: 'Dosis', cursive;">Have an account already?</h5>
-          <h2 style="color:grey;font-size:10px; font-family: 'Dosis', cursive;">By signing up, you agree to our Terms, Data Policy and Cookies Policy.</h2>
+          <h5 class="card-title" style="font-family: 'Dosis', cursive;color:white;">Have an account already?</h5>
+          <h2 style="color:white;font-size:10px; font-family: 'Dosis', cursive;">By signing up, you agree to our Terms, Data Policy and Cookies Policy.</h2>
           <a href="/accounts/login" class="btn btn-primary" style="font-family: 'Dosis', cursive;">Login</a>
         </div>
       </div>
 
-      <div class="card mt-5" style="width: 28rem;">
+      <div class="card mt-5 border border-primary" style="width: 28rem;background-color:black;">
         <div class="card-body text-center">
-          <h5 class="card-title" style="font-family: 'Dosis', cursive;">Get the app.</h5>
-          <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img src="{% static 'photos/house.jpeg' %}"
+          <h5 class="card-title" style="font-family: 'Dosis', cursive;color:white;">Get the app.</h5>
+          <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img src="{% static 'photos/appstore.png' %}"
               style="height:90px;width:200px;"></a>
-          <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/house1.jpg' %}" style="height:90px;width:200px;"></a>
+          <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/playstore.png' %}" style="height:90px;width:200px;"></a>
         </div>
       </div>
 
     </div>
 
-    <div class="col-md-5 mt-5">
+    <div class="col-md-5 mt-5" style="background-color:black;">
       {% if form.errors %}
       <p> Some Information Might be Incorrect </p>
       {% endif %}
-      <div class="card border-primary mb-4" style="max-width:25rem;">
+      <div class="card border-primary mb-4 border-bottom" style="max-width:25rem;background-color:black;">
 
         <div class="card-header text-center">
-          <h1 class="h1" style="font-family: 'Dosis', cursive; color:blue;font-size:40px;">NEIGHBOURHOOD</h1>
-          <h3 class="text-center" style="font-family: 'Dosis', cursive;color:grey;font-size:15px;">Sign up to view information about your neighbourhood</h3>
+          <h1 class="h1" style="font-family: 'Dosis', cursive; color:white;font-size:40px;">NEIGHBOURHOOD</h1>
+          <h3 class="text-center" style="font-family: 'Dosis', cursive;color:white;font-size:15px;">Sign up to view information about your neighbourhood</h3>
         </div>
         <div class="card-body text-primary">
 
-          <form action="/accounts/register/" method="post" style="font-family: 'Dosis', cursive;">
+          <form action="/accounts/register/" method="post" style="font-family: 'Dosis', cursive;color:white;">
             {% csrf_token %} {% bootstrap_form form %}
             <div class="form-group">
               <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
