--- a/neighbourhoodapp/templates/registration/login.html
+++ b/neighbourhoodapp/templates/registration/login.html
@@ -42,7 +42,7 @@
 
   <div class="row p-0 m-0">
     <div class="col-md-6" style="background-color:black;">
-      <div class="card mt-5" style="width: 28rem;background-color:black;">
+      <div class="card mt-5 border border-primary" style="width: 28rem;background-color:black;">
         <div class="card-body text-center">
           <h5 class="card-title" style="font-family: 'Dosis', sans-serif;color:white;">Don't have an account?</h5>
           <h2 style="color:white;font-size:10px;font-family: 'Dosis', sans-serif;">By signing up, you agree to our Terms, Data Policy and Cookies Policy.</h2>
@@ -51,13 +51,13 @@
       </div>
     </div>
     <div class="col-md-6">
-      <div class="card mt-5" style="width: 28rem; background-color:black;">
+      <div class="card mt-5 border border-primary" style="width: 28rem; background-color:black;">
         <div class="card-body text-center">
           <h5 class="card-title" style="font-family: 'Dosis', sans-serif;color:white;" >Get the app.</h5>
           <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8">
             <img src="{% static 'photos/appstore.png' %}"
-              style="height:90px;width:200px;"></a>
-          <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/playstore.png' %}" style="height:90px;width:200px;"></a>
+              style="height:60px;width:150px;"></a>
+          <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/playstore.png' %}" style="height:60px;width:150px;"></a>
         </div>
       </div>
     </div>
