--- a/neighbourhoodapp/templates/index.html
+++ b/neighbourhoodapp/templates/index.html
@@ -12,6 +12,7 @@
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
           <li data-target="#myCarousel" data-slide-to="3"></li>
+
         </ol>
         <!-- Wrapper for slides -->
         <div class="carousel-inner" style="">
@@ -110,7 +111,10 @@
 
                 </div>
                 {% endfor %}
+
+
               </div>
+
             </div>
           </div>
         </div>
@@ -119,16 +123,18 @@
   </section>
 </div>
 
+
 <div class="jumbotron text-center mt-0 mb-0" style="background-color:#000000;font-family: 'Dosis', sans-serif;">
   <h2 style="text-align:center;font-size:40px;color:#ffffff;"><strong>NEIGHBOURHOOD DIRECTORY</strong></h2>
-      <div class="card-deck d-flex w-32 border border-primary" style="background-color:#000000">
+      <div class="card-deck d-flex w-32 " style="background-color:#000000">
         {% for neighbourhood in neighbourhoods %}
-        <div class="card w-33 border border-primary" style="background-color:#000000">
-            <div class="card-title">
-              <p style="font-size:30px;color:white;"><strong>Neighbourhood:</strong>
+        <div class="card w-33 border border-info" style="background-color:#000000">
+            <div class="card-title border-bottom">
+              <p style="font-size:20px;color:white;"><strong>NEIGHBOURHOOD:</strong>
+
                 <strong><a href="/neighbourhood/{{neighbourhood.id}}">{{neighbourhood.neighbourhood_name}}</a></strong> </p>
             </div>
-          <hr>
+
             <div class="card-body border-info w-33" style="background-color:black;">
               <p style="color:white;">{{neighbourhood.neighbourhood_location}} </p>
               <p style="font-family: 'Dosis', sans-serif; text-align:center;color:white"> Resident Population:
@@ -141,32 +147,36 @@
                 <a href="{% url 'join' neighbourhood.id %}" class="btn btn-sm btn-info">
               JOIN THIS NEIGHBOURHOOD</a> </button>
               {% endif %}
+
         </div>
+
+
     </div>
         {% endfor %}
 </div>
 </div>
-<div class="jumbotron text-center mt-0 mb-0" style="background-color:#000000;font-family: 'Dosis', sans-serif;">
+<div class="jumbotron text-center mt-0 mb-0" style="background-color:black;font-family: 'Dosis', sans-serif;">
   <h2 style="text-align:center;font-size:40px;color:#ffffff;"><strong>BUSINESS DIRECTORY</strong></h2>
       <div class="card-deck d-flex">
         {% for business in businesses %}
-        <div class="card w-33">
-            <div class="card-title">
-              <p style="font-size:20px;"> <a href="{% url 'business' business.id %}"><strong>Business Name:</strong>
+        <div class="card w-33 border border-info" style="background-color:black;">
+            <div class="card-title border-bottom">
+              <p id="p" style="font-size:20px;color:white;"> <a href="{% url 'business' business.id %}"><strong>BUSINESS NAME:</strong>
 
                 <strong> {{business.business_name}}</strong> </a></p>
             </div>
           <hr>
             <div class="card-body border-info w-33">
 
-              <p>{{business.neighbourhood_id}} </p>
-              <p style="font-family: 'Dosis', sans-serif; text-align:center;"> Contact Information:
+              <p style="color:white;">{{business.neighbourhood_id}} </p>
+              <p style="font-family: 'Dosis', sans-serif; text-align:center;color:white;"> Contact Information:
                 <br>
                 {{ business.business_email_address}}
               </p>
             </div>
         </div>
         {% endfor %}
+
     </div>
 </div>
   <div class="jumbotron text-center mt-1" style="background-color:#000000;font-family: 'Dosis', sans-serif;">
