--- a/neighbourhoodapp/templates/business.html
+++ b/neighbourhoodapp/templates/business.html
@@ -3,22 +3,22 @@
 
 <div class="container">
 
-  <div class="jumbotron text-center" style="background-color:white;">
+  <div class="jumbotron text-center" style="background-color:black;">
 
-    <h1 class="h1" style="font-family: 'Dosis', cursive; color:blue;font-size:70px;">Business</h1>
+    <h1 class="h1" style="font-family: 'Dosis', cursive; color:white;font-size:70px;">Business</h1>
 
 
   </div>
 </div>
 
 <div class="container">
-  <div class="card mb-3" style="width:40rem;;">
+  <div class="card mb-3 border border-info " style="width:40rem;background-color:black;">
     <div class="card-body">
 
-      <h5 class="card-title" style="font-family: 'Dosis', sans-serif;"><strong>Business Name:</strong>
+      <h5 class="card-title border-bottom" style="font-family: 'Dosis', sans-serif;color:white;"><strong>Business Name:</strong>
         <br> {{business.business_name}}
       </h5>
-      <p class="card-text" style="font-family: 'Dosis', sans-serif;"><strong>Contact:</strong>
+      <p class="card-text" style="font-family: 'Dosis', sans-serif;color:white;"><strong>Contact:</strong>
         <br> {{business.business_email_address}}
       </p>
     </div>
