--- a/neighbourhoodapp/templates/registration/new_business.html
+++ b/neighbourhoodapp/templates/registration/new_business.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<div class="container" style="background-color:#fff;">
+<div class="container" style="background-color:black; color:white;font-family: 'Dosis', sans-serif;">
 
      <div class="row">
 
