--- a/neighbourhoodapp/templates/registration/new_project.html
+++ b/neighbourhoodapp/templates/registration/new_project.html
@@ -18,9 +18,11 @@
 </head>
 
 <body>
-<div class="container" style="background-color:#fff;">
+<div class="container" style="background-color:black; color:white;font-family: 'Dosis', sans-serif;">
 
      <div class="row">
+         <div class="col-md-12">
+
 
 
   <form  action="{%url 'new_project'%}" method="post" style="font-family: 'Dosis', sans-serif;" enctype="multipart/form-data">
@@ -35,7 +37,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% bootstrap_javascript %} {% endblock %}
 
-
+         </div>
      </div>
 </div>
 </body>
